# DRUniversumEngine

./: .gitmodules  CMakeLists.txt  add.php  updatEngine.bat
cfg/: LoginServer.json
dependencies/Core2/: CMakeLists.txt
dependencies/Core2/include/: Core2Main.h  DRBezierCurve.h  DRBezierCurve2.h  DRBoundingBox.h  DRBoundingBoxi.h  DRHash.hpp  DRHashList.hpp  DRLogger.h  DRMatrix.h  DRPack2D.h  DRResourcePtr.h  DRVector2.h  DRVector2i.h  DRVirtualFile.h
dependencies/Core2/src/: CMakeLists.txt  DRBezierCurve.cpp  DRBezierCurve2.cpp  DRBoundingBox.cpp  DRBoundingBoxi.cpp  DRFile.cpp  DRHashList.cpp  DRLogger.cpp  DRMatrix.cpp  DRPack2D.cpp  DRVector2i.cpp  DRVirtualFile.cpp
dependencies/Image/include/: DRImage.h  DRImageMain.h
dependencies/Image/src/: CMakeLists.txt  DRImage.cpp
dependencies/Network/: CMakeLists.txt
dependencies/Network/include/: BufferedConnection.h  Connection.h  Network.h  NetworkMain.h  Request.h
dependencies/Network/include/SDLNET/: SDL_net.h
dependencies/Network/src/: BufferedConnection.cpp  CMakeLists.txt  Connection.cpp  Network.cpp  Request.cpp
dependencies/UniNetwork/: CMakeLists.txt
dependencies/UniNetwork/include/: Connection.h  ConnectionFactory.h  HTTPConnection.h  Loggable.h  NetCrypto.h  UniNetwork.h  UniNetworkHeader.h
dependencies/UniNetwork/src/: CMakeLists.txt  Connection.cpp  ConnectionFactory.cpp  HTTPConnection.cpp  Loggable.cpp  NetCrypto.cpp  UniNetwork.cpp  main.cpp
import/include/Core2/: Core2Main.h  DRColor.h  DRCubicSpline.h  DRGameStateManager.h  DRIResource.h  DRMatrix.h  DRPlane.h  DRResourcePtr.h  DRResourcePtrHolder.h  DRVector2.h  DRVector2i.h  DRVector3.h
include/: UniversumLib.h  model.h
include/controller/: BaseGeometrieManager.h  BindToRenderer.h  BlockMaterialManager.h  BlockSektorTree.h  BlockTypeManager.h  CPUSheduler.h  CPUShedulerThread.h  CPUTask.h  Camera.h  Command.h  FileLoadingTask.h  FileSavingTask.h  FrameBufferRenderCall.h  GPUScheduler.h  GPUTask.h  InputCamera.h  InputCommand.h  InputControls.h  InstancingBlockManager.h  NetworkTask.h  Object.h  OctreeNode.h  Sektor.h  ShaderManager.h  Task.h  TextureManager.h  TileProducer.h
include/debug/: CPUSchedulerTasksLog.h
include/generator/: RenderToTexture.h  Sektor.h
include/lib/: BufferedNetworkPacket.h  CommandEventManager.h  Crypto.h  DRIImage.h  DRINetwork.h  DRInterface.h  DRMemoryList.h  Loadable.h  Logging.h  MultithreadContainer.h  MultithreadMap.h  MultithreadQueue.h  MultithreadResource.h  RSA.h  Singleton.h  Structures.h  Thread.h  TimeCounter.h  Timer.h
include/model/: BlockSektor.h  MoveableNode.h  MovingNode.h  Node.h  Object.h  Position.h  Rotation.h  RotationObject.h  Sektor.h  SektorGenerator.h  SektorID.h  ShaderProgram.h  SmallBlockSektor.h  Texture.h  UniformSet.h  Unit.h
include/model/block/: Block.h  BlockType.h  GeometrieBlock.h  MaterialBlock.h
include/model/geometrie/: BaseGeometrie.h  BaseGeometrieContainer.h  Plane.h  Rect2DCollection.h
include/server/: Callbacks.h  Client.h  ConnectionToAccountServer.h  ConnectionToLiveServer.h  ConnectionToServer.h  ConnectionToWorldDataServer.h  RequestCommand.h  SektorConnectionManager.h  Server.h
include/view/: BlockSector.h  BlockSektor.h  Camera.h  FrameBuffer.h  Material.h  MultiTextureMaterial.h  Object.h  RotationObject.h  Sektor.h  Texture.h  TextureMaterial.h  VisibleNode.h  VisibleObject.h  geometrie.h
include/view/block/: GeometrieBlock.h
include/view/geometrie/: BaseGeometrieContainer.h
scripts/: addObject.php
src/: CMakeLists.txt  main.cpp
src/controller/: BaseGeometrieManager.cpp  BlockMaterialManager.cpp  BlockSektorTree.cpp  BlockTypeManager.cpp  CPUSheduler.cpp  CPUShedulerThread.cpp  CPUTask.cpp  Camera.cpp  FileLoadingTask.cpp  FileSavingTask.cpp  FrameBufferRenderCall.cpp  GPUScheduler.cpp  GPUTask.cpp  InputCamera.cpp  InputControls.cpp  InstancingBlockManager.cpp  NetworkTask.cpp  Object.cpp  OctreeNode.cpp  Sektor.cpp  ShaderManager.cpp  Task.cpp  TextureManager.cpp
src/debug/: CPUSchedulerTasksLog.cpp
src/generator/: RenderToTexture.cpp  Sektor.cpp
src/lib/: BufferedNetworkPacket.cpp  CommandEventManager.cpp  Crypto.cpp  DRIImage.cpp  DRINetwork.cpp  DRInterface.cpp  Loadable.cpp  Logging.cpp  MultithreadContainer.cpp  RSA.cpp  Singleton.cpp  Structures.cpp  Thread.cpp  TimeCounter.cpp  Timer.cpp
src/model/: BlockSektor.cpp  MoveableNode.cpp  MovingNode.cpp  Node.cpp  Object.cpp  Position.cpp  Rotation.cpp  RotationObject.cpp  Sektor.cpp  SektorGenerator.cpp  SektorID.cpp  ShaderProgram.cpp  Texture.cpp  UniformSet.cpp  Unit.cpp
src/model/block/: Block.cpp  BlockType.cpp  GeometrieBlock.cpp  MaterialBlock.cpp
src/model/geometrie/: BaseGeometrie.cpp  BaseGeometrieContainer.cpp  Plane.cpp  Rect2DCollection.cpp
src/server/: ConnectionToAccountServer.cpp  ConnectionToServer.cpp  ConnectionToWorldDataServer.cpp  SektorConnectionManager.cpp  Server.cpp
src/view/: BlockSektor.cpp  Camera.cpp  FrameBuffer.cpp  Material.cpp  MultiTextureMaterial.cpp  Object.cpp  Sektor.cpp  Texture.cpp  TextureMaterial.cpp  VisibleNode.cpp  VisibleObject.cpp  geometrie.cpp
src/view/block/: GeometrieBlock.cpp
src/view/geometrie/: BaseGeometrieContainer.cpp
test/: BufferedConnectionTest.cpp  CMakeLists.txt  CPUTaskTest.cpp  HashTest.cpp  LoggerTest.cpp  LoginTest.cpp  TimerTest.cpp  UnitTest.cpp  main.cpp
test/include/: BufferedConnectionTest.h  CPUTaskTest.h  HashTest.h  LoggerTest.h  LoginTest.h  Test.h  TimerTest.h  UnitTest.h  main.h
