# DRCore

PROJECT(scripts/DRCore2 CXX)

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ../../lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../../bin)
SET(ARCHIVE_OUTPUT_DIRECTORY ../../lib)
if(MSVC)
#set(CMAKE_CXX_FLAGS "/arch:AVX2")  
endif(MSVC)
#SET(CMAKE_BUILD_TYPE Debug)

SUBDIRS(src)
INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(include/veclib)
INCLUDE_DIRECTORIES(lib)
INCLUDE_DIRECTORIES(bin)
INCLUDE_DIRECTORIES(../include)
INCLUDE_DIRECTORIES(../bin)
INCLUDE_DIRECTORIES(../../bin)
INCLUDE_DIRECTORIES(../../include)

cmake_minimum_required(VERSION 2.6)


#ADD_LIBRARY(Core2 SHARED core2main.cpp)
#ADD_EXECUTABLE(test ${testSrc})
