# Network src
FILE(GLOB SRC "*.cpp")
FILE(GLOB HEADER "../include/*.h")

SET(UniNetworkSrc ${SRC} ${HEADER})
# group
source_group("src" FILES ${SRC})
source_group("include" FILES ${HEADER})

#libs
SET(PA ../../../import/lib)
SET(PA2 ../dependencies/lib)
find_library(POCO_FOUNDATION_DEBUG_MT_2 PocoFoundationd PATHS ${PA2})
find_library(POCO_FOUNDATION_MT PocoFoundation PATHS ${PA2})
find_library(POCO_NET_DEBUG PocoNetd PATHS ${PA2})
find_library(POCO_NET PocoNet PATHS ${PA2})
find_library(POCO_UTIL_DEBUG PocoUtild PATHS ${PA2})
find_library(POCO_UTIL PocoUtil PATHS ${PA2})
find_library(POCO_XML_DEBUG PocoXMLd PATHS ${PA2})
find_library(POCO_XML PocoXML PATHS ${PA2})
find_library(POCO_CRYPTO_DEBUG PocoCryptod PATHS ${PA2})
find_library(POCO_CRYPTO PocoCrypto PATHS ${PA2})
find_library(POCO_NET_SSL_DEBUG PocoNetSSLd PATHS ${PA2})
find_library(POCO_NET_SSL PocoNetSSL PATHS ${PA2})
find_library(POCO_ZIP_DEBUG PocoZipd PATHS ${PA2})
find_library(POCO_ZIP PocoZip PATHS ${PA2})
find_library(DRCore2_LIB DRCore2 PATHS ${PA})

IF(WIN32)
	IF(CMAKE_BUILD_TYPE MATCHES Debug)
		SET(UniNetworkLibs ${POCO_FOUNDATION_DEBUG_MT_2} ${POCO_NET_DEBUG} DRUniversumLib ${POCO_UTIL_DEBUG} ${POCO_XML_DEBUG} ${POCO_CRYPTO_DEBUG} ${POCO_NET_SSL_DEBUG} ${POCO_ZIP_DEBUG})
	ENDIF(CMAKE_BUILD_TYPE MATCHES Debug)
	IF(CMAKE_BUILD_TYPE MATCHES Release)
		SET(UniNetworkLibs ${POCO_FOUNDATION_MT} ${POCO_NET} DRUniversumLib ${POCO_UTIL} ${POCO_XML} ${POCO_CRYPTO} ${POCO_NET_SSL} ${POCO_ZIP} ${DRCore2_LIB})
	ENDIF(CMAKE_BUILD_TYPE MATCHES Release)
ENDIF(WIN32)
IF(UNIX)
	SET(UniNetworkLibs PocoFoundation PocoUtil PocoXML PocoNet DRUniversumLib)
ENDIF(UNIX)

if (MSVC)
ADD_DEFINITIONS(-DNODEFAULTLIB:library)
endif(MSVC)

ADD_LIBRARY(UniNetwork SHARED ${UniNetworkSrc})
TARGET_LINK_LIBRARIES(UniNetwork ${UniNetworkLibs})
SET_TARGET_PROPERTIES( UniNetwork PROPERTIES LINK_FLAGS "/LIBPATH:dependencies/lib" )

set_target_properties(UniNetwork PROPERTIES DEFINE_SYMBOL BUILD_DLL_UNI_NETWORK)
SET_TARGET_PROPERTIES(UniNetwork PROPERTIES CMAKE_LIBRARY_OUTPUT_DIRECTORY ../../lib)
SET_TARGET_PROPERTIES(UniNetwork PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ../../bin)
